unpackaged/main/default/objects/EventApi__Schedule_Item__c/EventApi__Schedule_Item__c.object-meta.xml
<CustomObject>
    <description>Create and publish a schedule of activities configured for a given event.</description>
    <label>Schedule Item</label>
    <nameField>
        <label>Schedule Item Name</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Schedule</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>