unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Allow_Conflicts__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Allow_Conflicts__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, system will allow another schedule item to overlap the time slot for this schedule item.</description>
    <inlineHelpText>When checked, system will allow another schedule item to overlap the time slot for this schedule item.</inlineHelpText>
    <label>Allow Conflicts</label>
    <type>Checkbox</type>
</CustomField>