unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Assignments_Display_Label__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Assignments_Display_Label__c</fullName>
    <description>The label to display in the wizard for the step related to assigning people to a subscription.</description>
    <inlineHelpText>The label to display in the wizard for the step related to assigning people to a subscription.</inlineHelpText>
    <label>RESERVED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>