unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Capacity__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Capacity__c</fullName>
    <defaultValue>0</defaultValue>
    <description>** System Calculated Override ** The Capacity is used to restrict Attendees from registering once the threshold has been met if &quot;Enable Waitlisting&quot; is checked. Derives automatically from the &quot;Capacity&quot; of the related Room.</description>
    <inlineHelpText>** System Calculated Override ** The Capacity is used to restrict Attendees from registering once the threshold has been met if &quot;Enable Waitlisting&quot; is checked. Derives automatically from the &quot;Capacity&quot; of the related Room.</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>