unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Cost__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Cost__c</fullName>
    <description>The cost of the Schedule Item.</description>
    <inlineHelpText>The cost of the Schedule Item.</inlineHelpText>
    <label>Cost</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>