unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Discount_Account__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Discount_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field has been reserved for future use.</description>
    <inlineHelpText>This field has been reserved for future use.</inlineHelpText>
    <label>RESERVED</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Schedule Item (Discount Account)</relationshipLabel>
    <relationshipName>Discount_Account_Schedule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>