unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Display_Name__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Display_Name__c</fullName>
    <description>Schedule item name as you would like it to appear on the event pages.</description>
    <inlineHelpText>Schedule item name as you would like it to appear on the event pages.</inlineHelpText>
    <label>Display Name</label>
    <length>255</length>
    <type>Text</type>
</CustomField>