unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Duration__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Duration__c</fullName>
    <description>** System Calculated ** Duration in hours.</description>
    <formula>IF(FLOOR((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*24) &gt; 9,TEXT(FLOOR((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*24)),&quot;0&quot; &amp; TEXT(FLOOR((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*24)))
&amp; &quot;:&quot; &amp;
IF(ROUND(MOD((EventApi__Start_Date_Time__c - EventApi__End_Date_Time__c)*1440,60),0)&gt;9,TEXT(ROUND(MOD((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*1440,60),0)), IF(ROUND(MOD((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*1440,60),0)&gt; 9,TEXT(ROUND(MOD((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*1440,60),0)),&quot;0&quot; &amp; TEXT(ROUND(MOD((EventApi__End_Date_Time__c - EventApi__Start_Date_Time__c)*1440,60),0))))</formula>
    <inlineHelpText>** System Calculated ** Duration in hours.</inlineHelpText>
    <label>Duration</label>
    <type>Text</type>
</CustomField>