unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Enable_Waitlist__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Enable_Waitlist__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, attendees will have the option to be added to a waitlist once tickets are sold out (or capacity is reached) for this schedule item.</description>
    <inlineHelpText>When checked, attendees will have the option to be added to a waitlist once tickets are sold out (or capacity is reached) for this schedule item.</inlineHelpText>
    <label>Enable Waitlist</label>
    <type>Checkbox</type>
</CustomField>