unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__End_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>EventApi__End_Date_Time__c</fullName>
    <description>** Required ** Enter the end date and time for the schedule item.</description>
    <inlineHelpText>** Required ** Enter the end date and time for the schedule item.</inlineHelpText>
    <label>End Date/Time</label>
    <type>DateTime</type>
</CustomField>