unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Event_Category__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Event_Category__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the related event category. When linked, this schedule item will be included automatically in new events created within the same category.</description>
    <inlineHelpText>Link to the related event category. When linked, this schedule item will be included automatically in new events created within the same category.</inlineHelpText>
    <label>Event Category</label>
    <referenceTo>EventApi__Event_Category__c</referenceTo>
    <relationshipLabel>Schedule (Template)</relationshipLabel>
    <relationshipName>Schedule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>