unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Form__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Form__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to a form created in the &quot;Form Builder&quot; app. Customers will see the form when they select the schedule item.</description>
    <inlineHelpText>Link to a form created in the &quot;Form Builder&quot; app. Customers will see the form when they select the schedule item.</inlineHelpText>
    <label>Schedule Item Form</label>
    <referenceTo>PagesApi__Form__c</referenceTo>
    <relationshipLabel>Schedule Items</relationshipLabel>
    <relationshipName>Schedule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>