unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Image_URL__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Image_URL__c</fullName>
    <defaultValue>&quot;https://package-assets.s3.amazonaws.com/master/emerald/img/placeholders/item.png&quot;</defaultValue>
    <description>URL path of the image you want to display for this item.</description>
    <inlineHelpText>URL path of the image you want to display for this item.</inlineHelpText>
    <label>Image URL</label>
    <length>255</length>
    <type>Text</type>
</CustomField>