unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Is_Active__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Active__c</fullName>
    <defaultValue>true</defaultValue>
    <description>When checked, the schedule item is available for sale (if ticketed) and for publishing to the event.</description>
    <inlineHelpText>When checked, the schedule item is available for sale (if ticketed) and for publishing to the event.</inlineHelpText>
    <label>Is Active</label>
    <type>Checkbox</type>
</CustomField>