unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Is_Automatically_Added__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Automatically_Added__c</fullName>
    <defaultValue>false</defaultValue>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>