unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Is_Contribution__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Is_Contribution__c</fullName>
    <defaultValue>false</defaultValue>
    <description>** System Calculated Override ** Enable contribution (donation) related controls and features for this Item. Defaults to the value of the same field on the Item&#39;s related Item Class.</description>
    <inlineHelpText>** System Calculated Override ** Enable contribution (donation) related controls and features for this Item. Defaults to the value of the same field on the Item&#39;s related Item Class.</inlineHelpText>
    <label>Is Contribution</label>
    <type>Checkbox</type>
</CustomField>