unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Item__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Item__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>This field is a system field. Update at your own risk.</description>
    <inlineHelpText>This field is a system field. Update at your own risk.</inlineHelpText>
    <label>SYSTEM</label>
    <referenceTo>OrderApi__Item__c</referenceTo>
    <relationshipLabel>Schedule</relationshipLabel>
    <relationshipName>Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>