unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Line_Description__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Line_Description__c</fullName>
    <description>The description for the item as it should appear on related receipts and invoices. This field is limited to 255 characters.</description>
    <inlineHelpText>The description for the item as it should appear on related receipts and invoices. This field is limited to 255 characters.</inlineHelpText>
    <label>RESERVED</label>
    <length>255</length>
    <type>Text</type>
</CustomField>