unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Maximum_Number_of_Assignments__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Maximum_Number_of_Assignments__c</fullName>
    <description>** Conditionalbly Required ** If &quot;Restrict Number of Assignments&quot; is checked, a maximum number of assignments must be defined.</description>
    <inlineHelpText>** Conditionally Required ** If &quot;Restrict Number of Assignments&quot; is checked, a maximum number of assignments must be defined.</inlineHelpText>
    <label>RESERVED</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>