unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Price__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Price__c</fullName>
    <description>The list price of the schedule item, if applicable.</description>
    <inlineHelpText>The list price of the schedule item, if applicable.</inlineHelpText>
    <label>Price</label>
    <precision>18</precision>
    <scale>2</scale>
    <type>Currency</type>
</CustomField>