unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Quantity_Available__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Quantity_Available__c</fullName>
    <defaultValue>0</defaultValue>
    <description>Maximum capacity of the room or number of tickets available for the session.</description>
    <inlineHelpText>Maximum capacity of the room or number of tickets available for the session.</inlineHelpText>
    <label>Capacity</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>