unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Quantity_Sold__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Quantity_Sold__c</fullName>
    <defaultValue>0</defaultValue>
    <description>The number of tickets sold for this schedule item.</description>
    <inlineHelpText>The number of tickets sold for this schedule item.</inlineHelpText>
    <label>Tickets Sold</label>
    <precision>18</precision>
    <scale>0</scale>
    <type>Number</type>
</CustomField>