unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Refund_Account__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Refund_Account__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>The account to debit when refunding/crediting customers who have purchased this Item.</description>
    <inlineHelpText>The account to debit when refunding/crediting customers who have purchased this Item.</inlineHelpText>
    <label>Refund Account</label>
    <referenceTo>OrderApi__GL_Account__c</referenceTo>
    <relationshipLabel>Schedule Item (Refund Account)</relationshipLabel>
    <relationshipName>Refund_Account_Schedule_Items</relationshipName>
    <type>Lookup</type>
</CustomField>