unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Restrict_Number_of_Assignments__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Restrict_Number_of_Assignments__c</fullName>
    <defaultValue>false</defaultValue>
    <description>When checked, the system will limit the number of assignments allowed based on the value of the &quot;Maximum Number of Assignments&quot; field. Defaults unchecked.</description>
    <inlineHelpText>When checked, the system will limit the number of assignments allowed based on the value of the &quot;Maximum Number of Assignments&quot; field. Defaults unchecked.</inlineHelpText>
    <label>RESERVED</label>
    <type>Checkbox</type>
</CustomField>