unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Revenue_Recognition_Date__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Revenue_Recognition_Date__c</fullName>
    <label>Revenue Recognition Date</label>
    <type>Date</type>
</CustomField>