unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Room__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Room__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <description>Link to the room that the schedule item is taking place in.</description>
    <inlineHelpText>Link to the room that the schedule item is taking place in.</inlineHelpText>
    <label>Room/Location</label>
    <referenceTo>EventApi__Room__c</referenceTo>
    <relationshipLabel>Schedule</relationshipLabel>
    <relationshipName>Schedule</relationshipName>
    <type>Lookup</type>
</CustomField>