unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Start_Date_Time__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Start_Date_Time__c</fullName>
    <description>** Required ** Enter the start date and time for the schedule item.</description>
    <inlineHelpText>** Required ** Enter the start date and time for the schedule item.</inlineHelpText>
    <label>Start Date/Time</label>
    <type>DateTime</type>
</CustomField>