unpackaged/main/default/objects/EventApi__Schedule_Item__c/fields/EventApi__Start_Time__c.field-meta.xml
<CustomField>
    <fullName>EventApi__Start_Time__c</fullName>
    <description>** System Calculated ** The scheduled start time.</description>
    <formula>IF(
  OR(
    VALUE( MID( TEXT( EventApi__Start_Date_Time__c + (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 12, 2 ) ) = 0,
    VALUE( MID( TEXT( EventApi__Start_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 12, 2 ) ) = 12
  ),
  &quot;12&quot;,
  TEXT( VALUE( MID( TEXT( EventApi__Start_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24)), 12, 2 ) )
   -
   IF(
     VALUE( MID( TEXT( EventApi__Start_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 12, 2 ) ) &lt; 12,
     0,
     12
   )
  )
)
&amp; &quot;:&quot; &amp;
MID( TEXT( EventApi__Start_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 15, 2 )
&amp; &quot; &quot; &amp;
IF(
  VALUE( MID( TEXT( EventApi__Start_Date_Time__c +  (VALUE(SUBSTITUTE(SUBSTITUTE(LEFT(TEXT(EventApi__Event__r.EventApi__Time_Zone__c), 10),&quot;(GMT&quot;,&quot;&quot;),&quot;:&quot;,&quot;.&quot;))/24) ), 12, 2 ) ) &lt; 12,
  &quot;AM&quot;,
  &quot;PM&quot;
)</formula>
    <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
    <inlineHelpText>** System Calculated ** The scheduled start time.</inlineHelpText>
    <label>Start Time</label>
    <type>Text</type>
</CustomField>