unpackaged/main/default/objects/EventApi__Schedule_Item__c/listViews/EventApi__All.listView-meta.xml
<ListView>
    <fullName>EventApi__All</fullName>
    <columns>NAME</columns>
    <columns>EventApi__Event__c</columns>
    <columns>EventApi__Room__c</columns>
    <columns>EventApi__End_Date__c</columns>
    <columns>EventApi__Start_Date__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>